# RL

./: .gitignore  MCTS.ipynb  README.md  clipboard.txt  pyproject.toml  requirements.txt  setup.py
.ipynb_checkpoints/: BC-checkpoint.ipynb
BC.egg-info/: PKG-INFO  SOURCES.txt
BC/infrastructure/: logger.py  notebook_util.py  pytorch_util.py  sample_utils.py
BC/policies/: MLP_policy.py  base_policies.py  loaded_gaussian_policy.py
BC/scripts/: BC.ipynb  bc_dagger_runner.py
BC/scripts/.ipynb_checkpoints/: BC-checkpoint.ipynb
PG/agents/: pg_agent.py
PG/network/: critics.py  policies.py
PG/networks/: policies.py
PG/scripts/: PG.ipynb  pg_runner.py
data/dagger_bc_ant_Ant-v4_02-02-2025_02-31-32/: events.out.tfevents.1738485583.DESKTOP-DQ4LRS3  events.out.tfevents.1738485653.DESKTOP-DQ4LRS3
data/dagger_bc_ant_Ant-v4_02-02-2025_02-41-08/: events.out.tfevents.1738485669.DESKTOP-DQ4LRS3
data/lunar_ppo_LunarLander-v3_02-06-2025_01-43-12/: events.out.tfevents.1738827793.MacBook-Pro-10.local
infrastructure/: action_noise_wrapper.py  notebook_util.py  pytorch_util.py  replay_buffer.py  sample_utils.py
