[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "BC"
version = "0.1.0"
dependencies = [
    "mujoco==2.3.3",
    "gymnasium==1.0.0",
    "tensorboard==2.18.0",
    "tensorboardX==2.6.2.2",
    "ipython==8.18.1",
    "moviepy==1.0.3",
    "matplotlib==3.9.4",
    "opencv-python==4.11.0.86",
    "ipdb==0.13.13",
    "swig==4.3.0",
    "box2d-py==2.3.8",
    "pygame==2.6.1"
]  # Add dependencies here if needed

[project.optional-dependencies]
torch-gpu = [
    "torch==2.6.0+cu118",
    "torchvision==0.21.0+cu118",
    "torchaudio==2.6.0+cu118"
]